# bento

./: LICENSE  README.md  devenv.nix  flake.nix  justfile  pyproject.toml
.github/: image.nix
.github/workflows/: image.yml
bento/: bento.import  config.py
bento/classifier/rule/: rule_classify.py
bento/importers/alipay/: alipay.py
bento/importers/boc/: boc.py  boc_credit.py
bento/importers/citic/: citic_credit.py
bento/importers/cmb/: cmb.py  cmb_credit.py
bento/importers/wechat/: wechat.py
